src/css/styles.css
@font-face {
  font-family: digital;
  src: url(digital-7.ttf);
}

html, body {
  height: 100%;
}

body {
  margin: 0;
}

#root {
  background-color: #87ceeb;
  display: flex;
  justify-content: center;
  height: 100%;
}

#app-container {
  height: 50%;
  margin-top: 5%;
  font-family: "Baloo Bhai", cursive;
  text-align: center;
}

#app-header {
  font-size: 3em;
  margin-bottom: 15px;
}

#timer-display {
  border: 1px solid #000;
  border-radius: 25px;
}

#timer-label, #time-left {
  margin: 0;
}

#timer-label {
  font-size: 2em;
  margin-top: 20px;
}

#time-left {
  font-size: 5em;
  font-family: digital, monospace;
  margin-bottom: 20px;
}

#timer-controls {
  margin-top: 10px;
}

.control-btn, .timer-btn {
  background: rgba(135, 206, 235, 0);
  border: none;
  cursor: pointer;
  outline: none;
}

.timer-btn {
  margin: 5px;
  height: 40px;
  width: 40px;
}

.timer-btn img {
  display: block;
  margin: auto;
  height: auto;
  max-width: 100%;
}

.time-length-container {
  display: flex;
  justify-content: space-around;
  font-size: 1.3em;
}

.control-label, .time-length, .time-length-controls {
  display: inline-block;
}

.time-length {
  padding: 0px 10px;
  margin: 0;
}

.control-btn {
  font-size: 1.1em;
  border: 1px solid #000;
  border-radius: 5px;
  padding: 0px 10px;
  line-height: 30px;
}

.time-length-controls {
  height: auto;
  display: flex;
  align-items: center;
}


@media screen and (max-width: 376px) {
    #app-header {
      font-size: 2em;
    }

    #timer-label {
      font-size: 1.5em;
    }

    #time-left {
      font-size: 4em;
    }

    .time-length-container {
      flex-direction: column;
      align-items: center;
    }
}

.color-loop-animation {
  animation-name: color-loop;
  animation-duration: 50s;
  animation-iteration-count: infinite;
}

@keyframes color-loop {
  0% {
    background-color: #87ceeb;
  }

  10% {
    background-color: #4B0082;
  }

  20% {
    background-color: #0000FF;
  }

  30% {
    background-color: #FF7F00;
  }

  40% {
    background-color: #00FF00;
  }

  50% {
    background-color: #FFFF00;
  }

  60% {
    background-color: #00FF00;
  }

  70% {
    background-color: #FF7F00;
  }

  80% {
    background-color: #0000FF;
  }

  90% {
    background-color: #4B0082;
  }

  100% {
    background-color: #87ceeb;
  }
}

.red-color-loop-animation {
  animation-name: red-color-loop;
  animation-duration: 1s;
  animation-iteration-count: infinite;
}

@keyframes red-color-loop {
  0% {
    background-color: #FF0000;
  }

  50% {
    background-color: #800000;
  }

  100% {
    background-color: #FF0000;
  }
}  

